--- a/src/components/contact-form.astro
+++ b/src/components/contact-form.astro
@@ -16,6 +16,8 @@ import "components/css-components/style-contact-form.css";
               loading="lazy"
               alt="Same Day Appliance Repair"
               src="/images/same-day-appliance-repair-experts.webp"
+              width="600px"
+              height="500px"
             />
           </div>
 
@@ -24,6 +26,8 @@ import "components/css-components/style-contact-form.css";
               loading="lazy"
               alt="Same Day Appliance Repair"
               src="/img-price/oven-repair-cost/oven-repair-cost-1.webp"
+              width="600px"
+              height="500px"
             />
           </div>
           <div class="slide">
@@ -31,6 +35,8 @@ import "components/css-components/style-contact-form.css";
               loading="lazy"
               alt="Same Day Appliance Repair"
               src="/img-price/refrigerator-repair-cost/refrigerator-repair-cost-1.webp"
+              width="600px"
+              height="500px"
             />
           </div>
         </div>
