--- a/src/pages/services/commercial-refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/commercial-refrigerator-repair-los-angeles.astro
@@ -16,9 +16,9 @@ import "css/service/style_services.css";
 <Reviews />
 <Layout title="Same Day Commercial Refrigerator Repair Los Angeles">
   <Container>
-    <div class="content">
-      <h1 class="top">
-        <span class="animate-charcter"
+    <div class="content" style="padding: 0 10%">
+      <h1 class="top" >
+        <span class="animate-charcter" style="white-space: wrap;"
           >Same Day Commercial Refrigerator Repair</span
         > Los Angeles
       </h1>
