--- a/src/pages/services/fireplace-repair-los-angeles.astro
+++ b/src/pages/services/fireplace-repair-los-angeles.astro
@@ -16,7 +16,7 @@ import "css/service/style_services.css";
 <Reviews />
 <Layout title="Same Day Fireplace Repair Los Angeles">
   <Container>
-    <main>
+    <main style="padding: 0 10%">
       <h1>
         <span class="animate-charcter">Same Day Fireplace Repair</span> in Los Angeles
         and Surrounding Areas
