--- a/src/css/service/style_services-test.css
+++ b/src/css/service/style_services-test.css
@@ -739,8 +739,10 @@ main {
 }
 
 .logo-brand {
-    width: 150px;
-    height: 150px;
+    max-width: 150px;
+    min-width: 150px;
+    max-height: 150px;
+    min-height: 150px;
     justify-self: center;
     align-self: center;
     padding: 13px;
@@ -1784,8 +1786,10 @@ main {
     }
 
     .logo-brand {
-        width: 110px;
-        height: 110px;
+        max-width: 110px;
+        min-width: 110px;
+        max-height: 110px;
+        min-height: 110px;
         padding: 10px;
     }
 
