--- a/src/pages/services/refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/refrigerator-repair-los-angeles.astro
@@ -781,6 +781,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/whirlpool.webp"
                     alt="Whirlpool"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -792,6 +793,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/samsung.webp"
                     alt="Samsung"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -803,6 +805,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/lg.webp"
                     alt="LG"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -814,6 +817,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/GE-general-electric.webp"
                     alt="General Electric"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -825,6 +829,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/frigidaire.webp"
                     alt="Frigidaire"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -836,6 +841,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/kenmore.webp"
                     alt="Kenmore"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -847,6 +853,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/maytag.webp"
                     alt="Maytag"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -858,6 +865,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/kitchenAid.webp"
                     alt="KitchenAid"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -869,6 +877,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/sub-zero.webp"
                     alt="Sub-Zero"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -880,6 +889,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/bosch.webp"
                     alt="Bosch"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -891,6 +901,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/amana.webp"
                     alt="Amana"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -902,6 +913,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/electrolux.webp"
                     alt="Electrolux"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -913,6 +925,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/haier.webp"
                     alt="Haier"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -924,6 +937,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/thermador.webp"
                     alt="Thermador"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -935,6 +949,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/fisher-paykel.webp"
                     alt="Fisher & Paykel"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -946,6 +961,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/jennAir.webp"
                     alt="Jenn-Air"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -957,6 +973,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/viking.webp"
                     alt="Viking"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -968,6 +985,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/hotpoint.webp"
                     alt="Hotpoint"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -979,6 +997,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/magic-chef.webp"
                     alt="Magic Chef"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -990,6 +1009,7 @@ import "css/service/style_services-test.css";
                     height="300px"
                     src="/brand-logos/dacor.webp"
                     alt="Dacor"
+                    loading="lazy"
                   />
                 </a>
               </div>
