--- a/src/css/service/style_services-2.css
+++ b/src/css/service/style_services-2.css
@@ -53,6 +53,7 @@ h1 {
     font-size: clamp(35px, 7vw, 60px);
     line-height: clamp(56px, 8vh, 60px);
     font-weight: 900;
+    white-space: nowrap;
 }
 
 
@@ -86,10 +87,13 @@ main {
     max-width: 1920px;
     justify-self: center;
     height: 100%;
-    padding: 2% 3% 1% 3%;
+    padding: 10% 0;
 }
 
-
+/* .washer-page-header-d-full {
+    padding-top: clamp(5%, 8vh, 10%);
+    padding-bottom: clamp(3%, 5vh, 10%);
+} */
 
 .furnace-page-header-d-full .page-header-d {
     width: 45%;
@@ -107,25 +111,20 @@ main {
 
 .page-header-d {
     left: 0;
-    width: 80%;
+    width: 50%;
     position: relative;
     align-self: center;
-}
-
-@media (min-width:1440px) {
-    .page-header-d {
-        width: 50%;
-    }
-
-    .page-header-d-full {
-        padding: 3% 3% 3% 3%;
-    }
-
+    margin-top: 3%;
+    margin-left: 3%;
 }
 
 
 
 
+
+.page-header-d h1 {
+    margin-bottom: 3%;
+}
 
 
 .page-header-f {
@@ -135,46 +134,8 @@ main {
     margin-left: 40%;
 }
 
-.page-header-f-rel {
-    position: relative;
-}
-
-.page-header-f-gradient {
-    position: absolute;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 53%, rgba(255, 255, 255, 0.8991246156665791) 68%, rgba(255, 255, 255, 0) 89%);
-    margin-top: -15%;
-    height: 30vh;
-    width: 100vw;
-}
-
 .page-header-f img {
     width: 65%;
-}
-
-
-.page-header-p-full {
-    max-width: 1920px;
-    justify-self: center;
-    padding: 0 3% 1% 3%;
-    width: 100%;
-    text-align: left;
-}
-
-.page-header-p {
-    text-align: left;
-    width: 70%;
-}
-
-.page-header-p p {
-    color: #262626;
-    font-weight: 400;
-    font-size: clamp(16px, 3vw, 18px);
-}
-
-
-.page-header-p p:nth-child(1) {
-    margin-bottom: 10px;
 }
 
 .page213 {
@@ -645,7 +606,6 @@ main {
 .content__page-desc-phot {
     float: left;
     margin: 10px 15px 10px 0px;
-    max-width: 450px;
 }
 
 .content__page-desc-phot img {
@@ -739,10 +699,8 @@ main {
 }
 
 .logo-brand {
-    max-width: 150px;
-    min-width: 150px;
-    max-height: 150px;
-    min-height: 150px;
+    width: 150px;
+    height: 150px;
     justify-self: center;
     align-self: center;
     padding: 13px;
@@ -1636,34 +1594,20 @@ main {
 
 @media (max-width:1024px) {
 
-    .page-header-f img {
-        display: none;
-    }
 
     .page-header-d-full {
-        padding: 2% 2%;
+        padding: 5% 0;
     }
-
-    .page-header-d {
-        width: 100%;
-    }
-
-    .page-header-p {
-        text-align: left;
-        width: 100%;
-    }
-
-
 
     /* .washer-page-header-d-full, */
     .wine-cooler-page-header-d-full,
     .wine-cellar-page-header-d-full,
-    .commercial-oven-page-header-d-full {
+    .commercial-oven-page-header-d-full{
         padding-top: clamp(2%, 2vh, 10%);
         padding-bottom: clamp(1%, 2vh, 10%);
     }
 
-    .commercial-dishwasher-page-header-d-full .animate-charcter {
+    .commercial-dishwasher-page-header-d-full .animate-charcter{
         white-space: wrap;
     }
 
@@ -1770,7 +1714,9 @@ main {
         white-space: wrap;
     }
 
-
+    .page-header-f img {
+        display: none;
+    }
 
 
 
@@ -1786,10 +1732,8 @@ main {
     }
 
     .logo-brand {
-        max-width: 110px;
-        min-width: 110px;
-        max-height: 110px;
-        min-height: 110px;
+        width: 110px;
+        height: 110px;
         padding: 10px;
     }
 
@@ -1809,11 +1753,11 @@ main {
         font-size: 19px;
     }
 
-
+    
     .costTable-Factor tr {
         font-size: 13px;
     }
-
+   
     .costTable-Factor tr:nth-child(1) {
         font-size: 16px;
     }
