--- a/src/pages/services/refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/refrigerator-repair-los-angeles.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
-import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
@@ -12,7 +11,7 @@ import Faqs from "@components/js/faqs.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
 import ContactForm from "@components/contact-form.astro";
 
-import "css/service/style_services-test.css";
+import "css/service/style_services.css";
 ---
 
 <Navbar />
@@ -44,7 +43,7 @@ import "css/service/style_services-test.css";
 
         </div>
 
-        <div class="page-header-p-full">
+        <div class="page-header-p-full refrigerator-page-header-p-full">
           <div class="page-header-p">
           <p> Having problems with your refrigerator? We are definitely the best
             team to fix it, and we will solve all your appliance related
