--- a/src/pages/services/washing-machine-repair-los-angeles.astro
+++ b/src/pages/services/washing-machine-repair-los-angeles.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
-import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
@@ -10,36 +9,50 @@ import Arrow from "@components/js/arrow-phone.astro";
 import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
+import ContactForm from "@components/contact-form.astro";
 
 import "css/service/style_services.css";
 ---
 
 <Navbar />
 <Reviews />
-<Layout title="Whashing machine Repair Los Angeles">
+<Layout title="Washing Machine Repair Los Angeles and Nearby Areas">
   <Container>
     <main>
       <div class="page-header">
-        <div class="page-header-d-full washer-page-header-d-full">
+
+        <div class="page-header-d-full">
           <div class="page-header-d">
             <h1>
-              <span class="animate-charcter"
-                ><p>Whashing machine</p>
-                <p>Repair</p></span
-              >
+              <span class="animate-charcter">Washing Machine Repair Los Angeles and Nearby Areas</span>
             </h1>
-            <Contactbtn />
           </div>
         </div>
 
         <div class="page-header-f">
-          <img
+
+          <div class="page-header-f-rel">
+            <img
             src="/washer-repair/washing-machines-page_header_photos.webp"
             alt="Whashing machine"
             loading="lazy"
           />
+          </div>
+
+          <div class="page-header-f-gradient">
+          </div>
+
         </div>
+
+        <div class="page-header-p-full">
+          <div class="page-header-p">
+          <p> Having problems with your washer? We are definitely the best team to fix it, and we will solve all your appliance related problems! Why do we claim to be the best? It is not just us. Our well pleased customers, who call us back and keep recommending us to their friends and family, are proof of our quality washing machine repair services. If you search for washer repair Los Angeles, you will find many appliance repair companies that promise to deliver, and not many of them actually do. </p>
+          <p>To protect our customers, we ensure that our repairmen undergo extensive training in washing machine repairs, installation, and maintenance. We also strive to protect our customers by being an insured and licensed appliance repair company with a warranty. Providing a warranty gives our clients peace of mind, and they can call us back with a washer issue within three months after the repair. Repairing your washer is as important to us as it is to you. We strive to provide absolutely the best services in repairing your washer. This is why we promise a full refund if we cannot repair it.</p>
+          </div>
+        </div>
+
       </div>
+    </main>
 
       <div class="page213">
         <div class="open-full_left">
@@ -164,34 +177,7 @@ import "css/service/style_services.css";
         <div class="page213-container">
           <div class="page213-content" id="left-menu-1">
             <div class="content__page-desc">
-              <p>
-                The cost to repair a washing machine can vary widely depending
-                on several factors, including the nature of the problem, the
-                brand of the device, and your location. On average, a service
-                call to diagnose the issue can range from <b>$75 to $150</b>.
-                This initial fee typically covers the first visit and basic
-                troubleshooting to identify the problem. If parts need to be
-                replaced or more extensive repairs are required, the total cost
-                can increase significantly. For instance, replacing a faulty
-                motor or water pump can cost anywhere from <b>$200 to $600</b>,
-                while more minor repairs, such as fixing a door latch or belt,
-                might only add <b>$50 to $100</b> to the service call fee.
-              </p>
-
-              <p>
-                Given the potential expenses, it's important to weigh the cost
-                of repairs against the price of purchasing a new washing
-                machine. Most washers have a lifespan of around 10-15 years, so
-                if your machine is approaching this age, it might be more
-                cost-effective to invest in a new appliance rather than
-                continually paying for repairs. Additionally, frequent
-                breakdowns can lead to more hand washing and inconvenience, not
-                to mention the risk of water damage to your floor if the washer
-                is not operating correctly. Regular maintenance and prompt
-                attention to minor issues can help extend the life of your
-                washing machine and reduce the likelihood of needing costly
-                repairs.
-              </p>
+              <ContactForm />
             </div>
           </div>
 
@@ -3807,7 +3793,6 @@ import "css/service/style_services.css";
           </div>
         </div>
       </div>
-    </main>
     <Cta />
   </Container>
 
