--- a/src/pages/services/washing-machine-repair-los-angeles.astro
+++ b/src/pages/services/washing-machine-repair-los-angeles.astro
@@ -285,8 +285,8 @@ import "css/service/style_services.css";
               <div class="content__page-desc-phot">
                 <img
                   src="/washer-repair/washer2.webp"
-                  width="400px"
-                  height="500px"
+                  width="450px"
+                  height="450px"
                   alt="Microwave Repair"
                   loading="lazy"
                 />
@@ -392,8 +392,8 @@ import "css/service/style_services.css";
               <div class="content__page-desc-phot">
                 <img
                   src="/washer-repair/washer3.webp"
-                  width="400px"
-                  height="500px"
+                  width="450px"
+                  height="450px"
                   alt="Microwave Repair"
                   loading="lazy"
                 />
@@ -856,6 +856,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/whirlpool.webp"
                       alt="Whirlpool"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -867,6 +868,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/lg.webp"
                       alt="LG"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -878,6 +880,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/samsung.webp"
                       alt="Samsung"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -889,6 +892,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/GE-general-electric.webp"
                       alt="General Electric"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -900,6 +904,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/maytag.webp"
                       alt="Maytag"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -911,6 +916,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/bosch.webp"
                       alt="Bosch"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -922,6 +928,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/kenmore.webp"
                       alt="Kenmore"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -933,6 +940,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/electrolux.webp"
                       alt="Electrolux"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -944,6 +952,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/frigidaire.webp"
                       alt="Frigidaire"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -955,6 +964,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/speed-queen.webp"
                       alt="Speed Queen"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -966,6 +976,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/amana.webp"
                       alt="Amana"
+                      loading="lazy"
                     />
                   </a>
                 </div>
