--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -665,6 +665,7 @@ main {
 .content__page-desc-phot {
     float: left;
     margin: 10px 15px 10px 0px;
+    width: 100%;
     max-width: 450px;
 }
 
@@ -672,6 +673,7 @@ main {
     max-width: 100%;
     box-shadow: 0px 3px 5px 2px rgb(0 0 0 / 20%), 3px 2px 3px 0px rgb(0 0 0 / 14%), 3px 3px 14px 0px rgb(0 0 0 / 12%);
     border-radius: 10px;
+    margin: 0 auto;
 }
 
 .content__page-desc h3 {
