--- a/src/pages/services/freezer-repair-los-angeles.astro
+++ b/src/pages/services/freezer-repair-los-angeles.astro
@@ -971,6 +971,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/whirlpool.webp"
                       alt="Whirlpool"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -982,6 +983,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/frigidaire.webp"
                       alt="Frigidaire"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -993,6 +995,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/GE-general-electric.webp"
                       alt="GE general electric"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1004,6 +1007,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/lg.webp"
                       alt="LG"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1015,6 +1019,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/maytag.webp"
                       alt="Maytag"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1026,6 +1031,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/kenmore.webp"
                       alt="Kenmore"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1037,6 +1043,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/samsung.webp"
                       alt="Samsung"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1048,6 +1055,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/amana.webp"
                       alt="Amana"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1059,6 +1067,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/electrolux.webp"
                       alt="Electrolux"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1070,6 +1079,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/magic-chef.webp"
                       alt="Magic Chef"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1081,6 +1091,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/danby.webp"
                       alt="Danby"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1092,6 +1103,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/sub-zero.webp"
                       alt="Sub Zero"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1103,6 +1115,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/viking.webp"
                       alt="Viking"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1114,6 +1127,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/fisher-paykel.webp"
                       alt="Fisher & Paykel"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1125,6 +1139,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/dacor.webp"
                       alt="Dacor"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1136,6 +1151,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/monogram.webp"
                       alt="Monogram"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1147,6 +1163,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/galanz.webp"
                       alt="Galanz"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1158,6 +1175,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/balancing.webp"
                       alt="Balancing"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1169,6 +1187,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/whynter.webp"
                       alt="Whynter"
+                      loading="lazy"
                     />
                   </a>
                 </div>
