--- a/src/pages/services/freezer-repair-los-angeles.astro
+++ b/src/pages/services/freezer-repair-los-angeles.astro
@@ -78,7 +78,7 @@ import "css/service/style_services.css";
         <div class="full_left_menu_r">
           <div class="list_left">
             <a href="#left-menu-1">
-              <h2>Freezer Repair</h2>
+              <h2>Contact Form</h2>
             </a>
           </div>
 
